--- a/code_source/src/index.css
+++ b/code_source/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Roboto:wght@400;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Roboto:wght@300;400;500&display=swap');
 html, body{
   font-family: 'Open Sans', 'Roboto', sans-serif;
 }
